Tests/RunCMake/math/MATH-InvalidExpression-stderr.txt
^CMake Error at MATH-InvalidExpression.cmake:1 \(math\):
  math cannot parse the expression: "INVALID": syntax error, unexpected end
  of file \(7\).
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
